@@ -9,7 +9,7 @@ public class onetwozero {
         onetwozero solution = new onetwozero();
 
         List<List<Integer>> triangle = new ArrayList<>();
-        triangle.add(new ArrayList<>(Arrays.asList(2)));
+        triangle.add(new ArrayList<>(List.of(2)));
         triangle.add(new ArrayList<>(Arrays.asList(3, 4)));
         triangle.add(new ArrayList<>(Arrays.asList(6, 5, 7)));
         triangle.add(new ArrayList<>(Arrays.asList(4, 1, 8, 3)));
